--- a/src/ui/overrides.css
+++ b/src/ui/overrides.css
@@ -221,3 +221,8 @@
 .full-calendar-edit-modal .setting-item-control.is-override-disabled input {
     opacity: 0.6;
 }
+
+.full-calendar-edit-modal .options-group label.is-disabled {
+  cursor: not-allowed;
+  opacity: 0.6;
+}
